# ChangeLog for catalyst
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  28 Dec 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  This is catalyst 2.0.6.906

  28 Dec 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Run depclean at the end of stage generation (for Gentoo bug #295132)

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/livecdfs-update.sh:
  Apply patch from Gentoo bug #284585

  02 Sep 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Clean up a few extraneous spaces, line wrap a comment, and add Id.

  02 Sep 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS,
  +.gitattributes, README, TODO:
  Adding .gitattributes and adding an Id variable to AUTHORS, ChangeLog,
  README, and TODO.

  23 Aug 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/livecd_stage2_target.py:
  Apply patch for module blacklisting from gentoo bug #282148

  07 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Version bumping to 2.0.6.905 for release.

  28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> livecd/files/README.txt,
  livecd/files/x86-F6.msg:
  Apply patch to document espeakup support for Gentoo bug #267708

  27 May 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/config.py:
  import catalyst_support for Gentoo bug #271368

  24 Apr 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Rolling an official catalyst 2.0.6.904 version.

  04 Apr 2009; Andrew Gaffney <agaffney@gentoo.org> arch/arm.py:
  Apply additional patch from Gentoo bug #255793 for arm subarches

  04 Apr 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Apply patch from Gentoo bug #264457 to prevent deleting of ccache cache

  24 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> arch/sh.py:
  Additional sh patch from Gentoo bug #255793
