@@ -3,6 +3,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  29 Dec 2009; Andrew Gaffney <agaffney@gentoo.org>
+  targets/support/chroot-functions.sh:
+  Only run depclean for stage3/system
+
   28 Dec 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
   This is catalyst 2.0.6.906
 
